<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioGroup
        android:id="@+id/camOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <RadioButton
            android:id="@+id/backCam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BackCam" />

        <RadioButton
            android:id="@+id/frontCam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FrontCam" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/durationOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/camOption"
        android:layout_marginLeft="38dp"
        android:layout_toRightOf="@+id/camOption" >

        <RadioButton
            android:id="@+id/second30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second30" />

        <RadioButton
            android:id="@+id/minute2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute2" />

        <RadioButton
            android:id="@+id/minute5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute5" />

        <RadioButton
            android:id="@+id/minute10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute10" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/durationOption"
        android:layout_alignLeft="@+id/durationOption"
        android:text="@string/durationToUsed"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_launcher" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="onClickMain"
        android:src="@android:drawable/ic_menu_revert" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginRight="20dp"
        android:onClick="onClickMinimize"
        android:src="@drawable/minimize" />

    <Switch
        android:id="@+id/ftpOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_marginBottom="11dp"
        android:layout_toLeftOf="@+id/camOption"
        android:text="@string/uploadToCloud"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ftpOption"
        android:layout_centerHorizontal="true"
        android:text="@string/camToUsed"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginTop="21dp"
        android:text="Ayarlar"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40dp"
        android:textStyle="bold"
        android:typeface="serif" />

</RelativeLayout>